syntax = "proto3";

package com.carrier.carrierjvm;

service CarrierJvmService {
    rpc UpdateCarrierJvm(CarrierJvm) returns (Result);
    rpc AddCarrierJvm(CarrierJvm) returns (Result);
    rpc DeleteCarrierJvm(Void) returns (Result);
}

message CarrierJvm {
    string host = 1;
    string port = 2;
}

message Result {
    string status = 1;
}

message Void{}